# TheConsidition

./: README.md  Swagger UI.html  The Considition.html  api.key  swagger.json  theconsidition.se-rules.html
IronMan/: 1 - Bitmap, Flood Fill.ipynb  CMakeLists.txt  LidarParticleFilter.ipynb  README.md  TheConsidition.bat  TheConsidition.sh  TheConsiditionTest.sh  data.example.json  run_remote.sh  server socket.ipynb  state.json.html  tkinter_game.py  tmp.path.txt
IronMan/.ipynb_checkpoints/: LidarParticleFilter-checkpoint.ipynb
IronMan/Cpp/: grafs.cpp  grafs.hpp  main.cpp  mapdraw.cpp  mapdraw.hpp  objects.cpp  objects.h  skeletonize.hpp  vector2d.hpp
IronMan/CppTests/: astar_test.cpp  draw_windows_2.cpp  fast_hash.cpp  fast_hash.hpp  mapdraw.split.2.cpp  mapdraw.test.cpp  ncurses_window.cpp  ncurses_window_1.cpp  opencv.img.scaling.cpp  opencv.test.cpp  tcp_transfer_array.cpp
IronMan/Helps/: Rolling_ball.lsp
IronMan/Node/: astar.js  main.js  test.js
IronMan/Python/: Untitled.ipynb  a_star.py  api.py  conda.env.py36tf.txt  draw_map.py  gameid.txt  ironman.main.ipynb  main.py  mapdata_parser.py  py36tf.yml  requirements.py36tf.txt  showgame.ipynb  showgame.py  temp.py  test.py  threaded_window.py  threads.py  tkinter_logging.py  tkinter_text_stretching.py  vispy_tutorial.py
IronMan/Python/.ipynb_checkpoints/: Untitled-checkpoint.ipynb  ironman.main-checkpoint.ipynb
IronMan/Python2maps/: australiamap.txt  hawaiimap.txt  jonkopingmap.txt  kalmarmap.txt  main.py  southafricamap.txt  standardmap.txt  zurichmap.txt
IronMan/PythonTests/: Lidar.ipynb  client socket.ipynb
IronMan/datadir/: Dynamic Window Approach.ipynb  Untitled.ipynb  ironman.log.txt  mapdata.csv  mapdata.dynamic.csv  mapdata.mini.static.csv  mapdata.skeleton.static.csv  mapdata.static.csv  midpoints.csv  pathfrom.csv  pathstartwin.csv  skeleton.csv  startend.csv  state.json  statedata.json  waydata.csv
IronMan/state.json_files/: index.js(2).download  index.js.download  javascript.js.download  main.min.js.download
Swagger UI_files/: css
The Considition_files/: site.min.js.download
theconsidition.se-rules_files/: consid-styles.css  ironsite.min.css
